--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>weiwangzhan</title>
+    <title>天上西藏微网站后台</title>
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
   </head>
   <body>
