--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>天上西藏微网站后台</title>
+    <title>微网站后台</title>
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
     <script type="text/javascript" src="./static/ueditor1_4_3_3/third-party/jquery-1.10.2.min.js"></script>
   </head>
